<resources>
    <string name="app_name">Grocery List Management</string>
    <string name="manage_product_lists">Manage Product Lists</string>
    <string name="manage_shopping_lists">Shopping</string>
    <string name="menu_back_title">Back</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="manage_product_list_title">Manage Product Lists</string>
    <string name="create_new_product_list_title">Create New Product List</string>
    <string name="edit_product_list_title">Edit Product List</string>
    <string name="insert_list_name_placeholder">Insert list name</string>
    <string name="new_product">New Product</string>
    <string name="create_new_list_title">Create New List</string>
    <string name="finish_list">Finish List</string>
    <string name="add_new_product_title">Add New Product</string>
    <string name="insert_a_category_to_search_placeholder">Insert a category to search</string>
    <string name="insert_product_name_placeholder">Insert product name</string>
    <string name="insert_product_category_prompt">Insert product category</string>
    <string name="new_category_link"><u>New category</u></string>
    <string name="insert_product_brand_placeholder">Insert product brand</string>
    <string name="observations_placeholder">Observations</string>
    <string name="quantity_placeholder">Quantity</string>
    <string name="new_unit_link"><u>New unit</u></string>
    <string name="product_image_label">Product image:</string>
    <string name="btn_gallery_text">Gallery</string>
    <string name="btn_camera_text">Camera</string>
    <string name="check_icon" translatable="false">✔</string>
    <string name="add_new_category_dialog_titlle">Add New Category</string>
    <string name="insert_new_category_et_dialog_placeholder">Insert new category</string>
    <string name="add_new_unit_dialog_title">Add New Unit</string>
    <string name="insert_new_unit_placeholder">Insert new unit</string>
    <string name="insert_a_unit_prompt">Insert a unit</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="what_do_you_wanna_do_dialog_title">What do you want to do?</string>
    <string name="btn_delete_text">Delete</string>
    <string name="btn_copy_list_text">Copy list</string>
    <string name="create_list_from_existing_one_title">Create a new List from an existing one</string>
    <string name="no_categories_created_spinner_info">No categories created</string>
    <string name="no_units_created_spinner_info">No units created</string>
    <string name="category_already_exists_error">That category already exists!</string>
    <string name="product_already_exists">Product already exists!</string>
    <string name="this_field_cant_be_empty">This field can\'t be empty</string>
    <string name="checked_flag" translatable="false">:checked</string>
    <string name="you_have_to_add_products_first">You have to add products first!</string>
    <string name="category_doesnt_exist">Category doesn\'t exist!</string>
    <string name="define_the_product_quantity_dialog_title">Define the product quantity</string>
    <string name="confirm_quantity">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="should_create_new_units">Should create new units</string>
    <string name="add_new_unit_placeholder">Insert New Unit</string>
    <string name="add_unit_btn_text">Add unit</string>
    <string name="this_field_must_be_filled">This field must be filled!</string>
    <string name="unit_already_exists_error">Unit already exists!</string>
    <string name="you_have_to_select_at_least_one_product">You have to select at least one product.</string>
    <string name="list_name_already_exists">List name already exists</string>
    <string name="no_observations_set_for_this_product_yet">No observations set for this product yet.</string>
    <string name="alphabetical_order_menu_text">Alphabetical Order</string>
    <string name="created_date_menu_text">Created date</string>
    <string name="bougth_menu_text">Bougth</string>
    <string name="you_have_no_lists_created_click_on_the_plus_button">You don\'t have any lists. Create a new list by clicking the plus button bottom left.</string>
    <string name="already_exists_a_list_with_this_name">Already exists a list with this name!</string>
    <string name="edit_list_btn_txt">Finish</string>
    <string name="shopping_area">Shopping Area</string>
    <string name="you_have_no_lists_created_go_to_manage_product_lists_menu">You have no lists, create new lists on the \'Manage Product Lists\' menu.</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="purchase">Finish Purchase</string>
    <string name="purchase_products">Purchase Products</string>
    <string name="products_btn_txt">Products</string>
    <string name="alphabetical_order_asc_text">Alphabetical ASC</string>
    <string name="alphabetical_order_desc_text">Alphabetical DESC</string>
    <string name="price_sign">$</string>
    <string name="ipp_dialog_tv_text">Insert Product Price</string>
    <string name="ipp_dialog_et_placeholder_last_price">Last price:</string>
    <string name="ipp_dialog_et_placeholder_default">Insert product price</string>
    <string name="ph_dialog_tv_title">Price History</string>
    <string name="no_prices_set_for_this_product">No prices set for this product.</string>
    <string name="pp_et_price_placeholder">Price</string>
    <string name="pp_et_quantity_error">You have to insert a quantity!</string>
    <string name="pp_et_price_error">Have to insert a price!</string>
    <string name="total_start_number" translatable="false">0.0</string>
    <string name="pp_tv_total_text">Total:</string>
    <string name="inu_dialog_tv_title">Add New Unit</string>
    <string name="inu_dialog_et_placeholder">Insert new unit</string>
    <string name="prd_btn_text_finish_purchase">Purchase</string>
    <string name="purchase_history_btn_txt">Purchase History</string>
    <string name="manage_all_products_title">Manage All Products</string>
    <string name="mcu_manage_categories_text">Manage Categories</string>
    <string name="mcu_manage_units_text">Manage Units</string>
    <string name="you_have_to_add_categories_error">You have to add categories first!</string>
    <string name="you_have_to_add_units_first_error">You have to add units first!</string>
    <string name="acd_tv_edit_category_text">Edit Category</string>
    <string name="aud_tv_edit_unit_text">Edit Unit</string>
    <string name="manage_categories_title">Manage Categories</string>
    <string name="manage_units_title">Manage Units</string>
    <string name="you_dont_have_any_purchase_history_text">You don\'t have any purchases yet!</string>
    <string name="list_details_title">List Details</string>
    <string name="avbld_tv_bought_date_text">Bought Date:</string>
    <string name="are_you_sure_that_you_want_to_delete_the_product_image_title">Are you sure that you want to delete the product image?</string>
    <string name="dpi_dialog_btn_text_no">No</string>
    <string name="dpi_dialog_btn_text_yes">Yes</string>

</resources>