<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewProductActivity"
    android:background="@drawable/linearlayout_background"
    android:padding="@dimen/default_padding"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <EditText
                android:id="@+id/etProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cnpl_et_layout_margin"
                android:padding="@dimen/et_shape_standard_padding"
                android:background="@drawable/edit_text_shape"
                android:ems="10"
                android:hint="@string/insert_product_name_placeholder"
                android:inputType="text"
                android:textSize="@dimen/cnpl_et_name_text_size"
                android:importantForAutofill="no"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sProductCategory"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@drawable/spinner_shape"
                    android:textSize="@dimen/cnpl_et_name_text_size"
                    android:padding="@dimen/cnpl_spinner_padding"
                    android:layout_margin="@dimen/cnpl_et_layout_margin"/>

                <Button
                    android:id="@+id/btnAddNewCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/cnpl_spinner_padding"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <EditText
                android:id="@+id/etProductBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cnpl_et_layout_margin"
                android:padding="@dimen/et_shape_standard_padding"
                android:background="@drawable/edit_text_shape"
                android:ems="10"
                android:hint="@string/insert_product_brand_placeholder"
                android:inputType="text"
                android:textSize="@dimen/cnpl_et_name_text_size"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etObservations"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|start"
                    android:hint="@string/observations_placeholder"
                    android:background="@drawable/observation_edit_text"
                    android:textColor="@color/black"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:lines="3"
                    android:scrollHorizontally="false"
                    android:layout_margin="@dimen/cnp_et_margin"
                    android:padding="@dimen/cnp_et_padding"
                    android:importantForAutofill="no"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/cnpl_ll_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_image_label"
                    android:textSize="@dimen/cnp_product_image_label_text_size"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/cnp_tv_product_image_padding"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnGaleria"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btn_gallery_text"
                        android:textSize="@dimen/cnp_product_image_label_text_size"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:padding="@dimen/cnpl_btn_padding_vertical"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/btnCamara"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btn_camera_text"
                        android:textSize="@dimen/cnp_product_image_label_text_size"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:padding="@dimen/cnpl_btn_padding_vertical"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivPreview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/cnp_iv_margin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddNewList"
        android:layout_width="@dimen/mpl_plus_btn_size"
        android:layout_height="@dimen/mpl_plus_btn_size"
        android:background="@drawable/rounded_button_new_list"
        android:gravity="center"
        android:text="@string/check_icon"
        android:textColor="@color/green"
        android:textSize="@dimen/cnp_btn_check_text_size"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>