<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/linearlayout_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:padding="@dimen/default_padding"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/final_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ac_cl_margin"
                android:orientation="vertical"
                android:padding="@dimen/ac_cl_padding" >

                <Button
                    android:id="@+id/btnPurchaseHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btns_ripple_main_activity"
                    android:padding="@dimen/ac_btn_padding"
                    android:text="@string/purchase_history_btn_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ac_btn_text_size"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/ac_btn_padding"
                    app:layout_constraintBottom_toTopOf="@+id/btnViewAllProducts"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="16dp" />

                <Button
                    android:id="@+id/btnViewAllProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btns_ripple_main_activity"
                    android:text="@string/products_btn_txt"
                    android:textColor="@color/white"
                    android:padding="@dimen/ac_btn_padding"
                    android:textSize="@dimen/ac_btn_text_size"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/ac_btn_padding"
                    app:layout_constraintBottom_toTopOf="@+id/btnProductsLists"
                    app:layout_constraintTop_toBottomOf="@+id/btnPurchaseHistory"
                    tools:layout_editor_absoluteX="16dp" />

                <Button
                    android:id="@+id/btnProductsLists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btns_ripple_main_activity"
                    android:padding="@dimen/ac_btn_padding"
                    android:text="@string/manage_product_lists"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ac_btn_text_size"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/ac_btn_padding"
                    app:layout_constraintBottom_toTopOf="@+id/btnShoppingLists"
                    app:layout_constraintTop_toBottomOf="@+id/btnViewAllProducts"
                    tools:layout_editor_absoluteX="16dp" />

                <Button
                    android:id="@+id/btnShoppingLists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btns_ripple_main_activity"
                    android:padding="@dimen/ac_btn_padding"
                    android:text="@string/manage_shopping_lists"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ac_btn_text_size"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/ac_btn_padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnProductsLists"
                    tools:layout_editor_absoluteX="16dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>